--- a/index.html
+++ b/index.html
@@ -7,17 +7,40 @@
     <title>Aman Kumar - Frontend Developer</title>
   </head>
   <body>
-    <div class="sidebar">
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>About Me</li>
-          <li>Skills</li>
-          <li>Projects</li>
-          <li>Blog</li>
-        </ul>
-      </nav>
+    <div class="container">
+      <div class="sidebar">
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>About Me</li>
+            <li>Skills</li>
+            <li>Projects</li>
+            <li>Blog</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="main">
+        <div class="infoContainer">
+          <div class="devInfo">
+            <div class="hello">Hi I am</div>
+            <div class="name">Aman Kumar</div>
+            <div class="about">Developer,Dancer</div>
+            <div class="moreabout">
+              Hi I am a Developer And I Love to drink coffee. I live in Patna
+              and I love to visit Kashmir.
+            </div>
+            <div class="buttons">
+              <button>Download CV</button>
+              <button>Contact Me</button>
+            </div>
+          </div>
+          <div class="devPic">
+            <img src="./images/myImage.png.png" alt="Aman Kumar" />
+          </div>
+        </div>
+      </div>
     </div>
+
     <script src="./index.js"></script>
   </body>
 </html>
