--- a/project.html
+++ b/project.html
@@ -31,10 +31,8 @@
               and I love to visit Kashmir.
             </div>
             <div class="buttons">
-              <a href="./cv.txt" target="_blank"
-                ><button class="btn">Download CV</button></a
-              >
-              <a href="./contact.html"><button class="btn">Contact Me</button></a>
+              <button>Download CV</button>
+              <button>Contact Me</button>
             </div>
           </div>
           <div class="devPic">
