--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,26 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">
+      <div class="sidebar sidebarGo">
         <nav>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/intro.html">About Me</a></li>
-            <li><a href="/skills.html">Skills</a></li>
-            <li><a href="/project.html">Projects</a></li>
-            <!-- <li><a href="/blog.html">Blog</a></li> -->
+            <li><a href="/blog.html">Blog</a></li>
             <li><a href="/contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div>
       <div class="main">
+        <div class="hamburger">
+          <img
+            class="ham"
+            src="./images/Hamburger_icon.png"
+            alt=""
+            width="23"
+          />
+          <img class="cross" src="./images/cross.png" alt="" width="23" />
+        </div>
         <div class="contactForm">
           <h1>Contact me for work/general Enquiry</h1>
           <form>
@@ -59,7 +66,7 @@
                 >I want you to work on a project with me.</label
               >
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-sm">Submit</button>
           </form>
         </div>
       </div>
