--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">
+      <div class="sidebar sidebarGo">
         <nav>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/intro.html">About Me</a></li>
-            <li><a href="/skills.html">Skills</a></li>
-            <li><a href="/project.html">Projects</a></li>
-            <!-- <li><a href="/blog.html">Blog</a></li> -->
+            <li><a href="/blog.html">Blog</a></li>
             <li><a href="/contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div>
       <div class="main">
+        <div class="hamburger">
+          <img
+            class="ham"
+            src="./images/Hamburger_icon.png"
+            alt=""
+            width="23"
+          />
+          <img class="cross" src="./images/cross.png" alt="" width="23" />
+        </div>
         <div class="infoContainer">
           <div class="devInfo">
             <div class="hello">Hi I am</div>
@@ -34,7 +41,9 @@
               <a href="./cv.txt" target="_blank"
                 ><button class="btn">Download CV</button></a
               >
-              <a href="./contact.html"><button class="btn">Contact Me</button></a>
+              <a href="./contact.html"
+                ><button class="btn">Contact Me</button></a
+              >
             </div>
           </div>
           <div class="devPic">
