--- a/intro.html
+++ b/intro.html
@@ -3,43 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./intro.css" />
     <title>Aman Kumar - Frontend Developer</title>
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">
+      <div class="sidebar sidebarGo">
         <nav>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/intro.html">About Me</a></li>
-            <li><a href="/skills.html">Skills</a></li>
-            <li><a href="/project.html">Projects</a></li>
-            <!-- <li><a href="/blog.html">Blog</a></li> -->
+            <li><a href="/blog.html">Blog</a></li>
             <li><a href="/contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div>
       <div class="main">
-        <div class="infoContainer">
-          <div class="devInfo">
-            <div class="hello">Hi I am</div>
-            <div class="name">Aman Kumar</div>
-            <div class="about">Developer,Dancer</div>
-            <div class="moreabout">
-              Hi I am a Developer And I Love to drink coffee. I live in Patna
-              and I love to visit Kashmir.
+        <div class="hamburger">
+          <img
+            class="ham"
+            src="./images/Hamburger_icon.png"
+            alt=""
+            width="23"
+          />
+          <img class="cross" src="./images/cross.png" alt="" width="23" />
+        </div>
+        <div class="intro">
+          <h2>About Me</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+            consequuntur nobis officiis laboriosam necessitatibus. Dignissimos
+            illo obcaecati doloribus voluptatum minima officia. Culpa ex
+            repellendus repudiandae adipisci voluptas, nemo totam commodi?
+          </p>
+          <h2>My Skills</h2>
+          <div class="skillContainer">
+            <div class="skillItem">
+              HTML:
+              <div class="skill hundred"></div>
             </div>
-            <div class="buttons">
-              <button>Download CV</button>
-              <button>Contact Me</button>
+            <div class="skillItem">
+              CSS:
+              <div class="skill hundred"></div>
             </div>
-          </div>
-          <div class="devPic">
-            <img
-              src="https://img.freepik.com/free-photo/portrait-smiling-businessman-with-arms-crossed_329181-12179.jpg?size=626&ext=jpg&ga=GA1.1.1546980028.1704326400&semt=ais"
-              alt="Aman Kumar"
-            />
+            <div class="skillItem">
+              JAVASCRIPT:
+              <div class="skill fifty"></div>
+            </div>
+            <div class="skillItem">
+              REACT:
+              <div class="skill fifty"></div>
+            </div>
+            <div class="skillItem">
+              REDUX:
+              <div class="skill fifty"></div>
+            </div>
+            <div class="skillItem">
+              MONGODB:
+              <div class="skill t5"></div>
+            </div>
+            <div class="skillItem">
+              GENERATIVE AI:
+              <div class="skill fifty"></div>
+            </div>
           </div>
         </div>
       </div>
